--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ URL: https://rapsim.bangyou.me/,
 BugReports: https://github.com/byzheng/rapsim/issues
 Encoding: UTF-8
 LazyData: true
-Imports: jsonlite, xml2, tibble, magrittr, tidyr, dplyr, rlang
+Imports: stringr, utils
 RoxygenNote: 7.1.1
 Suggests: 
     testthat,
